# ese5190-2022-lab2b-esp

lab/01_registers/: README.md
lab/02_repl/: README.md
lab/02_repl/code/: CMakeLists.txt  repl.c
lab/03_sequencer/: README.md
lab/04_slow_motion/: README.md
lab/04_slow_motion/code/: recording.txt  sequencer.c  sequencer.py
lab/05_i2c_traffic/: README.md
lab/06_pioscope/: README.md
lab/06_pioscope/code/: CMakeLists.txt  pioscope.c
lab/07_pio_sequencer/: README.md
lab/07_pio_sequencer/code/: CMakeLists.txt  pioscope.c  pioscope.dis  pioscope.elf  pioscope.elf.map  pioscope.hex  pioscope.uf2  recording.txt
lab/08_adps_protocol/: README.md
lab/08_adps_protocol/code/: CMakeLists.txt  apds.c
lab/09_lab_on_a_chip/: README.md
lab/09_lab_on_a_chip/code/: CMakeLists.txt  lab.c  neopixel.c
lab/10_protoboard/: README.md
lab/10_protoboard/code/: code.py
